mono (2.0.1-5) unstable; urgency=low

  * The "Let the show begin!" release
    + Upload to unstable starting the Mono 2.0 transition, status available at:
      http://wiki.debian.org/Teams/DebianMonoGroup/Mono20TransitionTODO
  * debian/control:
    + The compilers (mono-mcs and mono-gmcs) are not forward compatible with
      newer upstream versions, thus added stronger dependencies.

 -- Mirco Bauer <meebey@debian.org>  Tue, 24 Feb 2009 23:12:16 +0100

mono (2.0.1-4) experimental; urgency=low

  * debian/rules:
    + Pass internal-mono instead of --internal-mono if the debhelper version
      is older than 7.1, as that one doesn't support custom parameters via
      init(). This ensures backwards compatibility with older debhelper
      versions, as found in Ubuntu.
  * debian/control:
    + Lowered debhelper build-dep to >= 5.
  * debian/dh_clideps
    debian/dh_makeclilibs:
    + Re-synced from cli-common 0.6.0, needed for dh 7.0 backwards
      compatibilty.

 -- Mirco Bauer <meebey@debian.org>  Tue, 27 Jan 2009 00:15:04 +0100

mono (2.0.1-3) experimental; urgency=low

  * Rebuilt against libc6 and glib from unstable.

 -- Mirco Bauer <meebey@debian.org>  Mon, 26 Jan 2009 22:49:05 +0100

mono (2.0.1-2) experimental; urgency=low

  [ Jo Shields ]
  * debian/patches/fix_wsdl2_duplicate_keys_r117243.dpatch:
    + Fix bug in wsdl2 preventing parsing of Amazon Web Services 
      wsdl file (thanks to Iain Lane <laney@ubuntu.com> for help
      isolating this bug)
  * debian/patches/fix_NetworkInterface_exception_r120282.dpatch:
    + Warn, rather than fail, on "funny" network interfaces
      (Closes: #507297)

  [ Mirco Bauer ]
  * debian/mono-1.0-devel.{postinst,prerm}
    debian/mono-mcs.{postinst,prerm}
    debian/mono-devel.{postinst,prerm}:
    + Moved update-alternatives calls to mono-devel.{postinst,prerm}.
  * debian/mono.links
    debian/mono.postinst
    + Removed, those are just left-overs.
  * debian/mono-jit.postinst: