@@ -3,8 +3,18 @@ Section: interpreters
 Priority: optional
 Maintainer: Debian Mono Group <pkg-mono-group@lists.alioth.debian.org>
 Uploaders: Mirco Bauer <meebey@debian.org>, Sebastian Dröge <slomo@debian.org>, Jo Shields <directhex@apebox.org>
-Build-Depends: debhelper (>= 5), dpkg-dev (>= 1.13.19), libglib2.0-dev (>= 2.4), bison, libtool, dpatch, libxml-dom-perl, libxslt1-dev, dc, libx11-dev, libxt-dev, zlib1g-dev
-Build-Depends-Indep: libgamin-dev, libcups2-dev, librsvg2-dev, libgtk2.0-dev, libgnomeui-dev
+Build-Depends: debhelper (>= 5),
+	dpkg-dev (>= 1.13.19),
+	libglib2.0-dev (>= 2.4),
+	bison,
+	libtool,
+	dpatch,
+	libxml-dom-perl,
+	libxslt1-dev,
+	dc,
+	libx11-dev,
+	libxt-dev,
+	zlib1g-dev
 Standards-Version: 3.8.0
 Homepage: http://www.mono-project.com/
 Vcs-Svn: svn://svn.debian.org/svn/pkg-mono/mono/trunk
