@@ -1,9 +1,14 @@
 libMonoPosixHelper 0 libmono0 (>= 2.0)
 libgdiplus 0 libgdiplus (>= 2.0)
 libgluezilla 0 libgluezilla (>= 2.0)
-libcairo 2 libcairo2 (>= 1.6.4-6.1)
+libcairo 2 libcairo2 (>= 1.8.0-2)
 libfbclient 2 libfbclient2 (>= 2.0.4)
 libsqlite 0 libsqlite0 (>= 2.8.17)
 libsqlite3 0 libsqlite3-0 (>= 3.5.9)
 libasound 2 libasound2 (>> 1.0.16)
 libgda-2 3 libgda2-3
+libgamin-1 0 libgamin0
+libcups 2 libcups2 (>= 1.3.8)
+librsvg-2 2 librsvg2-2 (>= 2.18.1)
+libgtk-x11-2.0 0 libgtk2.0-0 (>= 2.12.0)
+libgnomeui-2 0 libgnomeui-0 (>= 2.17.1)
